@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.286 2007/02/22 20:16:23 stelian Exp $
+$Id: CHANGES,v 1.287 2008/04/17 15:16:47 stelian Exp $
 
 Changes between versions 0.4b41 and 0.4b42 (released xxxxxxxxxxxxxxx)
 =====================================================================
@@ -19,6 +19,10 @@ Changes between versions 0.4b41 and 0.4b42 (released xxxxxxxxxxxxxxx)
 
 4.	Fix EA set failures when restoring immutable files. Thanks
 	to Andrew Kroeger for the patch.
+
+5.	Fix "mode file too large" errors when restoring huge backups.
+	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
+	report.
 
 Changes between versions 0.4b40 and 0.4b41 (released January 2, 2006)
 =====================================================================
